Fixed gap between items in CardPage

--- a/src/components/CardPage/CardPage.css
+++ b/src/components/CardPage/CardPage.css
@@ -8,6 +8,11 @@
   width: 100%;
   margin: 0;
 }
+@media (max-width: 576px) {
+  .row {
+    gap: 15px;
+  }
+}
 
 .search-area .filter-multi-select {
   width: 100% !important;
